--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,9 @@ android {
         }
     }
 }
-
+repositories{
+    mavenCentral ()
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -26,6 +28,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+//    adding facebook sdk
+    implementation 'com.facebook.android:facebook-android-sdk:4.35.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 }
